[package]
name = "tokio-foo"
version = "0.1.0"
authors = ["Marco Amann <trimoq@gmail.com>"]

[dependencies]
bytes = "0.4.6"
byteorder = "1.2.2"
#futures = "0.1"
futures = "0.2.1"
tokio = "0.1.5"
tokio-io = "0.1"
tokio-core = "0.1"
#tokio-proto = "0.1"

rust-crypto = "0.2.36"

itertools = "0.7.8"

num = "0.1.42"

sha1 = "0.6.0"

[[bin]]
name = "main"
path = "src/main.rs"


#[[bin]]
#name = "crypto"
#path = "src/auth/Crypto.rs"